# generative-ai-nd

./: .env_local  .gitignore  pyproject.toml
Course_01/module-3-applications-of-generative-ai/demo/: demo.ipynb
Course_01/module-3-applications-of-generative-ai/exercises/solution/: llm-assisted-merge-sort-solution.ipynb
Course_01/module-3-applications-of-generative-ai/exercises/starter/: llm-assisted-merge-sort-starter.ipynb
Course_01/project/starter/: gen_ai_fundamentals_project_starter.ipynb  gen_ai_fundamentals_project_starter_Version2.ipynb
Course_02/demos/: demo-1.ipynb  demo-2.ipynb  demo-3.ipynb  demo-4.ipynb  demo-5.ipynb  demo1_chatbot_basics.ipynb  demo2_tokenization.ipynb
Course_02/demos/chroma_db/: chroma.sqlite3
Course_02/lesson-2-prompt-cost-evaluation/exercises/solution/: prompt_cost_evaluation.py
Course_02/lesson-3-rag-system/exercises/solution/: chromadb_rag_system.py
Course_02/lesson-4-evaluate-rag-systems/exercises/solution/: ragas_rag_evaluation.py
Course_02/project/: BATCH_EVALUATION_GUIDE.md  ERROR_INFO_TAB_GUIDE.md  FINAL_REPORT.md  REVIEWER_GUIDE.md  VOCAREUM_SETUP.md
Course_02/project/starter_files/: .gitignore  batch_evaluate.py  chat.py  embedding_pipeline.py  evaluation_dataset.txt  llm_client.py  rag_client.py  ragas_evaluator.py  requirements.txt  test_system.py
Course_02/project/starter_files/apollo13/: AS13_TEC.txt
module-5-building-applications-using-foundation-models/exercises/starter/: build-a-spam-classifier-using-a-foundation-model-starter.ipynb
project/starter/: gen_ai_fundamentals_project_starter.ipynb
(+18 files in other folders)
