[project]
name = "generative-ai-nd"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "dataset>=1.6.2",
    "datasets>=4.4.2",
    "ipykernel>=7.1.0",
    "litellm>=1.80.10",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
    "ragas>=0.4.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "unsloth>=2025.11.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
